[package]
name = "env_config_derive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "^1.0.36" # >=1.0.36, <2.0.0
quote = "^1.0.10" # >=1.0.10, <2.0.0
syn = "^1.0.83" # >=1.0.83, <2.0.0


[lib]
proc-macro = true
